// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

package isis_aggregation.protobuf;

enum ValidityState {
  INVALID = 0;
  VALID = 2;
  VALID_RAW_ONLY = 3;
  UNVERIFIED = 4;
  EXPIRED = 8;
}

message Parameter {
extensions 10 to 110;

  optional string name = 1;
  optional string definition = 2;
  optional float extractedValue = 3;
  optional float rawValue = 4;
  optional float convertedValue = 5;
  optional bytes triggerOnCounter = 6;
  optional bytes triggerOffCounter = 7;
  optional ValidityState validityState = 8;
  optional bool isObsolete = 9;

}


message IsisAggregation {
extensions 5 to 106;

  optional int32 onboardDate = 1;
  optional int32 groundDate = 2;
  optional bool isNominal = 3;
  repeated Parameter parameters = 4;
}